feat: implement terpenes catalog and tooltip in strain hunter
